--- a/Vijay.html
+++ b/Vijay.html
@@ -2,3 +2,5 @@
   <h1>Vijay</h1>
 </center>
   <hr>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, placeat! Quo deserunt voluptas, labore illum ab recusandae pariatur ex impedit.</p>
